<resources>
    <string name="app_name">My Geographic Life</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyATdMKUTWoT7kw0PZStdAWgPkn6QPthZLI</string>
    <string name="location_card_name">Location Name</string>
    <string name="location_card_latitude">Location Latitute</string>
    <string name="location_card_longitude">Location Longitude</string>

    <string name="locations_add_title">Tap on the location you visited</string>

    <string name="location_list_title">Visited Locations</string>

    <string name="location_edit_title">Location details</string>
    <string name="location_add_title">Add new location</string>

    <string name="location_form_nameLabel">Name</string>
    <string name="location_form_nameInput">Name of the location...</string>
    <string name="location_form_descLabel">Description</string>
    <string name="location_form_descInput">Description of the location</string>
    <string name="location_form_categoryLabel">Category</string>

    <string name="location_edit_latitude">Latitude</string>
    <string name="location_edit_longitude">Longitude</string>

    <string name="btn_save">Save</string>
    <string name="btn_edit_coordinate">Edit Coordinate</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_mode_add">Add</string>
    <string name="btn_mode_Info">Info</string>
    <string name="btn_mode_default">Default</string>
    <string name="btn_mode_Edit">Edit</string>
    <string name="no_location_available">No location available</string>
</resources>
