<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/locations_edit_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location_edit_latitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:fontFamily="@font/raleway_medium"
                android:padding="5dp"
                android:text="@string/location_edit_latitude"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location_edit_latitudeInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:padding="5dp"
                android:textAlignment="textEnd"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location_edit_longitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:fontFamily="@font/raleway_medium"
                android:padding="5dp"
                android:text="@string/location_edit_longitude"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location_edit_longitudeInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:padding="5dp"
                android:textAlignment="textEnd"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/location_edit_confirmBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/btn_confirm"
                android:textColor="@color/White" />

            <Button
                android:id="@+id/location_edit_cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/GreyDark"
                android:text="@string/btn_cancel"
                android:textColor="@color/White" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>