<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/location_form_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/location_detail_editBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location_form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_medium"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/location_form_closeBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/button_close"
                android:contentDescription="TODO" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location_form_nameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/location_form_nameLabel"
                android:textColor="@color/GreyDarker" />

            <EditText
                android:id="@+id/location_form_nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_textinput"
                android:ems="10"
                android:fontFamily="@font/raleway_medium"
                android:hint="@string/location_form_nameInput"
                android:inputType="textPersonName"
                android:paddingLeft="4dp"
                android:paddingTop="8dp"
                android:paddingRight="4dp"
                android:paddingBottom="8dp"
                android:textColor="@color/Dark"
                android:textSize="12sp"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location_form_descLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/location_form_descLabel"
                android:textColor="@color/GreyDarker" />

            <EditText
                android:id="@+id/location_form_descInput"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/bg_textarea"
                android:ems="10"
                android:fontFamily="@font/raleway_medium"
                android:gravity="top"
                android:hint="@string/location_form_descInput"
                android:inputType="textMultiLine"
                android:paddingLeft="4dp"
                android:paddingTop="8dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp"
                android:textColor="@color/Dark"
                android:textSize="12sp"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/location_form_categoryLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/location_form_categoryLabel"
                    android:textColor="@color/GreyDarker" />

                <Spinner
                    android:id="@+id/location_form_categoryInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_spinner"
                    android:paddingLeft="4dp"
                    android:paddingTop="4dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="4dp" />

            </LinearLayout>

            <Button
                android:id="@+id/location_form_editCoord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/btn_edit_coordinate"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="12dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_detail_editBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/location_form_confirmBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_weight=".5"
            android:background="@color/GreyDark"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <Button
            android:id="@+id/location_form_cancelBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_weight=".5"
            android:background="@color/GreyDark"
            android:textColor="@color/Crimson"
            android:textSize="10sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>